# snake

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  README.md  main.cpp  vcpkg.json
logic/: Board.cpp  Board.h  DirectionEnum.h  RandomNumber.h
logic/actors/: Snake.cpp  Snake.h
logic/boardRules/: BoardRule.h  SnakeReachBoardBottomEdge.cpp  SnakeReachBoardBottomEdge.h  SnakeReachBoardLeftEdge.cpp  SnakeReachBoardLeftEdge.h  SnakeReachBoardRightEdge.cpp  SnakeReachBoardRightEdge.h  SnakeReachBoardTopEdge.cpp  SnakeReachBoardTopEdge.h  SnakeReachItem.cpp  SnakeReachItem.h  SnakeTouchItself.cpp  SnakeTouchItself.h
logic/items/: Apple.cpp  Apple.h  Item.h
ui/: TextureCreator.cpp  TextureCreator.h
ui/actors/: SnakeUI.cpp  SnakeUI.h
ui/items/: AppleUI.cpp  AppleUI.h
ui/layers/: InformationLayer.cpp  InformationLayer.h  Layer.cpp  Layer.h
ui/layers/texts/: GameText.cpp  GameText.h  SnakePointDynamicText.cpp  SnakePointDynamicText.h
